<resources>
    <string name="app_name">Freelancer Project</string>
    <string name="drawer_open">Open navigation drawer</string>
    <string name="drawer_close">Close navigation drawer</string>
    <string name="hello_world">Hello world!</string>
    <string name="title_activity_base">BaseActivity</string>
    <string name="title_activity_welcome">Home Screen</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">Go HomePage</string>
    <string name="slide_1_desc">Wanna take your brand everywhere? Go mobile. With a custom-designed app, your business goes wherever your customers goâ€”all in the palm of their hand.</string>
    <string name="slide_2_desc">Web design is the process of creating websites. It encompasses several different aspects, including webpage layout, content production, and graphic design.</string>
    <string name="slide_3_desc">Post your project for free, Compare and select Freelancers Service Providers.Lets start working on the best projects in the IT Market World.</string>
    <string name="slide_4_desc">freelancer. a person who works as a writer, designer, performer, or the like, selling work or services by the hour, day, job, etc., rather than working on a regular salary basis for one employer</string>
    <string name="play_again_desc">To see the welcome slider again</string>
    <string name="play_again">Play Again</string>
    <string name="title_activity_home">HomeActivity</string>
    <string name="title_activity_splash_screen">SplashScreen</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_resigter">ResigterActivity</string>
    <string name="addanyproject">Freelancer Project</string>
    <string name="createaccount">Create an account</string>
    <string name="fullname">Full Name</string>
    <string name="mobile">Mobile</string>
    <string name="email">Email Address</string>
    <string name="landline">Land Line</string>
    <string name="company">Company / Freelance</string>
    <string name="gender">Gender</string>
    <string name="male">male</string>
    <string name="female">female</string>
    <string name="placeofbirth">Place of Birth</string>
    <string name="signin">Sign in</string>
    <string name="password">Password</string>
    <string name="varification">Varification Code</string>
    <string name="or">OR</string>
    <string name="signup">Sign Up</string>
    <string name="login">Log in</string>
    <string name="forgot">Forgot Password?</string>
    <string name="logintext">We, at Freelancer Project have expert professionals in every field who deliver the best end-to-end solutions. Our domain experience is into software development, mobile applications, web applications, ecommerce development, technical support, enterprise mobility, data and analytic consulting solutions, testing, digital marketing and many more.</string>
    <string name="addnew">Freelancer</string>
    <string name="addnews">Project</string>
    <string name="loginf">POST YOUR REQUIREMENT</string>
    <string name="loginss">HIRE FREELANCERS</string>
    <string name="logintt">COMPLETE THE PROJECT</string>
    <string name="loginline">Freelancer Project Login</string>
    <string name="logint"></string>
    <string name="title_activity_login_new">LoginNewActivity</string>
    <string name="title_activity_resigter_activity_first">ResigterActivityFirst</string>
    <string name="title_activity_post">PostActivity</string>
    <string name="title_activity_sign_up_client">SignUpClient</string>
    <string name="title_activity_thank_you">ThankYou</string>
    <string name="KApplicationName">RangeSeekBarDemo</string>
    <string name="KSelectPriceRange">Select price range</string>
    <string name="KPriceFormat">%1$s$</string>
    <string name="title_activity_register_freelancers">RegisterFreelancers</string>
    <string name="title_activity_register_company">RegisterCompany</string>
    <string name="title_activity_about_us">AboutUs</string>
    <string name="aboutus">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Royaltrix Technology stands tall to be one of the most excellent software development companies in India which is growing rapidly. Experience, dedication, passion and commitment to work has made us stay on top. Our major asset is our creative technical team who have enormous experience and skill set. With their support we have taken up many projects in India and across the world and delivered them with ease. We have worked with several clients whose business is into different segments. Without compromising on quality we put our 100% efforts to place your business on a pedestal of growth. We know the ever-increasing needs and expectations of the customers and hence we strive to offer our clients robust solutions that give value for money.</string>
    <string name="aboutusa">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;One of our smartest works is royaltrix.com. It s a unique platform which acts as a bridge between the client and the freelancer or companies. The process is quiet simple</string>
    <string name="aboutusb">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Firstly, you post your requirement i.e. details of the project and what is to be done and wait for the service providers to respond. Then pick the best service provider based on your budget and requirements. Make the deal with him. Check the status on daily basis and finally, ask the service provider to test it before delivering it to you. Isnt this as simple as it is? Yes, and the biggest advantage is you dont have worry about the cost as its very much reasonable.</string>
    <string name="aboutusc">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;For suppose if you are a service provider, contact the client immediately as soon as they post the requirement. Then explain him why you are the best choice to take up his project showing your previous work experience and about the company. If everything goes well, meet the client, make a deal and complete the project.</string>
    <string name="aboutusd">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;We, at royaltrix.com have expert professionals in every field who deliver the best end-to-end solutions. Our domain experience is into software development, mobile applications, web applications, ecommerce development, technical support, enterprise mobility, data and analytic consulting solutions, testing, digital marketing and many more. We assure you that we shall fulfill your needs beyond your expectations. So, if you are looking out for the finest client-centric organization who can offer the most reliable services, then you are at the right place.</string>
    <string name="title_activity_contact_us">ContactUs</string>
    <string name="title_activity_services">Services</string>
    <string name="title_activity_profile">ProfileActivity</string>
    <string name="title_activity_change_password">ChangePassword</string>
    <string name="title_activity_edit_profile">EditProfile</string>
    <string name="title_activity_pricing">PricingActivity</string>
    <string name="title_activity_transactional_history">TransactionalHistory</string>
    <string name="title_activity_transactional_one">TransactionalOne</string>
    <string name="title_activity_transactional_second">TransactionalSecond</string>
    <string name="title_activity_transactional_third">TransactionalThird</string>
    <string name="title_activity_get_project_details">GetProjectDetails</string>
    <string name="title_activity_z">Z</string>
    <string name="title_activity_setting">SettingActivity</string>
    <string name="servicedetaila">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Software! This has been the core for any business as of now. Without a software, its not easy to manage anything. We are one of the fastest growing software development companies in India at present. Looking at the kind of pace we are moving at, we pride ourselves to be on top. Our success always inspires us to make a better move every time and reach greater heights. Presently, we are offering a range of software development services in India and across the world. Every project we take up will be delivered precisely and the end product would be exactly the same you have asked for in your requirements.</string>
    <string name="servicedetailb">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Mobile Application Development has been around for quite some time now and almost every business is conscious about the key benefits that an app can provide their business. Mobile apps have made peoples lives simple in their busy schedule. As the online world is rapidly progressing from desktop to mobile, its very important to have a mobile app for any business in the present day competitive world. Especially people whose business is into airlines, hotels and restaurants, travel sites, etc are increasingly going for a mobile app development company for developing their app. Even the budding startup businesses know the importance of a mobile app and building one for their business. </string>
    <string name="servicedetailc">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;In this present-day world of continuous technological advancements, it is exceedingly important that having an online presence to your business creates an outstanding first impression. So, your brand identity can be well depicted through a website because it virtually portrays your business  company or an organization on the internet. A website can remarkably enhance your online presence only when it has a blend of right functionality and imagination. Hence, its significantly vital to build a website for your company that sends a right message to your clients and upholds your brand image efficiently. We, at royaltrix.com, are geared up to create a website that exceeds your expectations. We are among the few companies in India who strive to standout from the rest by focusing on quality and innovation. </string>
    <string name="servicedetaild">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;In todays world of business development, Digital Marketing in the new buzz! Almost all the business are going digital for marketing their brand as this is inexpensive compared to advertising with hoardings, banners, and newspapers. Moreover posting on social channels is free! We can create business pages and promote your products and services with ease. Social Media Marketing, Search Engine Optimization, Pay Per Click, Content Marketing, Online Reputation Management and many more comes under Digital Marketing. Since our inception, we have raised the standards of many brands looking from the digital front.</string>
    <string name="servicedetaile">&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;&#160;Maintaining a website is very important just as creating one. We know that websites face technical errors time to time and for fixing those errors, technical web support staff is a must. royaltrix.com provides premium support and maintenance services even after the deployment of your website. These services are very much necessary to stay ahead among your peers. Most of the companies, especially ecommerce websites need frequent updates to their websites either its the product uploads or content changes or error checks, bugs, missing links, troubleshoot problems, or any other essential updates. So, we offer affordable website support and maintenance services and make sure your business objectives and requirements are met. We have maintained basic HTML websites to very complex ecommerce websites. </string>
</resources>