<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="#ffffff"
    android:orientation="vertical" >
  <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:layout_below="@+id/first"
        android:orientation="vertical" >

        <LinearLayout
            android:id="@+id/dddd"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal" >
    <ScrollView
        android:id="@+id/bottom_panels"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@null"
        android:scrollbars="@null" >
       
        

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <ImageView
                android:id="@+id/tdxtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:background="@drawable/logobig"
                android:contentDescription="@drawable/logobig"
                android:gravity="center" />
 <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
             android:gravity="center"
             android:layout_marginTop="5dp"
            android:orientation="horizontal" >
            <TextView
                android:id="@+id/txtUserndame"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
               
                android:text="@string/addnew"
                android:textColor="@color/addanyprojectfirst"
                android:textSize="25sp" />
             <TextView
                android:id="@+id/txtUsername"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/addnews"
                android:layout_marginLeft="4dp"
                android:textColor="@color/addanyprojectsecond"
                android:textSize="25sp" />
            
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical" >
  <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/ff"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginf"
                    android:textColor="#795548"
                    android:textSize="12sp" />
                
                
                
                  
                </LinearLayout>
                <ImageView
                    android:id="@+id/faddcebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/handrightblack"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:contentDescription="@drawable/handrightblack" />
                <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >
                <TextView
                    android:id="@+id/sfs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/loginss"
                    android:textColor="#795548"
                    android:textSize="12sp" />
                 
                  
                  </LinearLayout>
                  
                <ImageView
                    android:id="@+id/faddcgfebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:background="@drawable/handrightblack"
                    android:layout_marginLeft="3dp"
                    android:layout_marginRight="3dp"
                    android:contentDescription="@drawable/handrightblack" />
                 <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:orientation="horizontal" >
                  
                     <TextView
                    android:id="@+id/tt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logintt"
                    android:textColor="#795548"
                    android:textSize="12sp" />
                     </LinearLayout>
                   <TextView
                    android:id="@+id/tddt"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/logint"
                    android:textColor="#795548"
                    android:textSize="12sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="30dp"
                android:gravity="center"
                android:orientation="horizontal" >

                <ImageView
                    android:id="@+id/facebook"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/login"
                    android:contentDescription="@drawable/login"
                    android:gravity="center" />

                <TextView
                    android:id="@+id/signddfupf"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="3dp"
                    android:layout_marginTop="3dp"
                    android:gravity="center"
                    android:text="@string/or"
                    android:textColor="@color/green"
                    android:textSize="15sp"
                    android:visibility="gone" />

                <ImageView
                    android:id="@+id/googleplus"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="3dp"
                    android:layout_weight="1"
                    android:background="@drawable/logingoole"
                    android:contentDescription="@drawable/logingoole"
                    android:gravity="center" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:layout_marginLeft="20dp"
                android:layout_marginRight="20dp"
                android:layout_marginTop="10dp"
                android:gravity="center"
                android:orientation="vertical" >

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/backgrounds"
                    android:orientation="horizontal" >

                    <TextView
                        android:id="@+id/signup"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:gravity="center"
                        android:padding="13dp"
                        android:text="@string/signup"
                        android:textColor="#D50000"
                        android:textSize="13sp" />
                </LinearLayout>

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="2dp"
                    android:layout_weight="1"
                    android:background="@drawable/button_border"
                    android:text="@string/login"
                    android:textColor="#ffffff"
                    android:textSize="14sp" />
            </LinearLayout>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:orientation="horizontal" >

                <TextView
                    android:id="@+id/skip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginRight="20dp"
                    android:text="@string/skip"
                    android:textColor="@color/addanyprojectsecond"
                    android:textSize="15sp" >
                </TextView>
            </LinearLayout>
        </LinearLayout>

    </ScrollView>
           </LinearLayout>
           </RelativeLayout>

</RelativeLayout>