<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/addanyprojectsecond"
        android:padding="15dp" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/sddkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="About Us"
            android:textColor="@color/white"
            android:textSize="15sp" >
        </TextView>


    </RelativeLayout>
    <ScrollView
        android:id="@+id/ss"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/first"
        android:fadingEdge="none"
        android:fillViewport="true"
        android:layout_marginBottom="60dp"
        android:scrollbars="none" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >
            <RelativeLayout
                android:id="@+id/firsts"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/first"
                android:padding="30dp" >

                <ImageView
                    android:id="@+id/sdddkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:layout_centerVertical="true"
                    android:background="@null"
                    android:src="@drawable/logobig" >
                </ImageView>


            </RelativeLayout>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:orientation="vertical" >

                <TextView
                    android:id="@+id/sddddkip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/aboutus"
                    android:textColor="@color/black"
                    android:textSize="15sp" >
                </TextView>
                <TextView
                    android:id="@+id/sddddkdip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/aboutusa"
                    android:textColor="@color/black"
                    android:textSize="15sp" >
                </TextView>
                <TextView
                    android:id="@+id/sddddshdkdip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/aboutusb"
                    android:textColor="@color/black"
                    android:textSize="15sp" >
                </TextView>
                <TextView
                    android:id="@+id/sddddkfdgdip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/aboutusc"
                    android:textColor="@color/black"
                    android:textSize="15sp" >
                </TextView>
                <TextView
                    android:id="@+id/sdddfgddkdip"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:text="@string/aboutusd"
                    android:textColor="@color/black"
                    android:textSize="15sp" >
                </TextView>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
    <include
        android:id="@+id/footer"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        layout="@layout/bottomlayout" />
</RelativeLayout>
