<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:gravity="center" >

    <RelativeLayout
        android:id="@+id/first"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/addanyprojectsecond"
        android:padding="15dp" >

        <ImageView
            android:id="@+id/back"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:background="@drawable/back" />

        <TextView
            android:id="@+id/sddkip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="40dp"
            android:text="Sign Up"
            android:textColor="@color/white"
            android:textSize="15sp" >
        </TextView>

        <TextView
            android:id="@+id/skip"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentRight="true"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true"
            android:text="@string/skip"
            android:textColor="@color/white"
            android:textSize="15sp" >
        </TextView>
    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/first"
        android:layout_marginLeft="15dp"
        android:layout_marginRight="15dp"
        android:layout_marginTop="10dp"
        android:gravity="center"
        android:background="@android:color/white"
        android:orientation="vertical" >

        <android.support.design.widget.TextInputLayout
            android:id="@+id/fullname"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/mobdsdile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/fullname"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/mobile"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/mobidfsgle"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/mobile"
                android:inputType="phone" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/email"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/dfd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/email"
                android:inputType="textWebEmailAddress" />
        </android.support.design.widget.TextInputLayout>

        <android.support.design.widget.TextInputLayout
            android:id="@+id/company"
            android:layout_width="match_parent"
            android:layout_marginTop="5dp"
            android:layout_height="wrap_content" >

            <EditText
                android:id="@+id/dfcsdd"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="Enter client Name"
                android:inputType="text" />
        </android.support.design.widget.TextInputLayout>

       
<android.support.design.widget.TextInputLayout
                        android:id="@+id/location"
                        android:layout_width="match_parent"
                        android:layout_marginTop="5dp"
                        android:layout_height="wrap_content" >

                        <EditText
                            android:id="@+id/dfcsdd"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:hint="Location"
                            android:inputType="text" />
                    </android.support.design.widget.TextInputLayout>

        <Button
            android:id="@+id/btndLogin"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="15dp"
            android:background="@drawable/button_border"
            android:padding="3dp"
            android:text="@string/signin"
            android:textColor="@color/white"
            android:textSize="18sp" />
    </LinearLayout>

</RelativeLayout>